...
                    ) {
                        Checkbox(
                            enabled = !isLoading,
                            checked = keepOldTitleChecked,
                            onCheckedChange = null
                        )
                        Text("Keep the old title and excerpt", modifier = Modifier.padding(start = 8.dp))
                    }
                    Row(
                        verticalAlignment = Alignment.CenterVertically,
                        modifier = Modifier
                            .clickable(enabled = !isLoading) {
                                updateArchiveChecked = !updateArchiveChecked
...
                    ) {
                        Checkbox(
                            enabled = !isLoading,
                            checked = updateEbookChecked,
                            onCheckedChange = null
                        )
                        Text("Update Ebook as well", modifier = Modifier.padding(start = 8.dp))
                    }
                }
            },
            confirmButton = {
                LoadingButton(
                    text = "Update",
...
